<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/prefs_cat_notification" >
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="notify_on_boot"
			android:persistent="true"
			android:summaryOff="@string/prefs_show_notification_summary_off"
			android:summaryOn="@string/prefs_show_notification_summary_on"
			android:title="@string/prefs_show_notification" />

		<RingtonePreference
			android:dependency="notify_on_boot"
			android:key="ringtone"
			android:ringtoneType="notification"
			android:shouldDisableView="true"
			android:showDefault="true"
			android:showSilent="true"
			android:title="@string/prefs_ringtone" />

		<CheckBoxPreference
			android:defaultValue="false"
			android:dependency="notify_on_boot"
			android:key="vibrate"
			android:persistent="true"
			android:shouldDisableView="true"
			android:title="@string/prefs_vibrate" />

		<EditTextPreference
			android:defaultValue=""
			android:dependency="vibrate"
			android:dialogMessage="@string/prefs_vibrate_pattern_message"
			android:dialogTitle="@string/prefs_vibrate_pattern"
			android:key="vibrate_pattern"
			android:persistent="true"
			android:shouldDisableView="true"
			android:title="@string/prefs_vibrate_pattern" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/prefs_cat_stats" >
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="include_deep_sleep"
			android:persistent="true"
			android:summaryOff="@string/prefs_include_deep_sleep_summary_off"
			android:summaryOn="@string/prefs_include_deep_sleep_summary_on"
			android:title="@string/prefs_include_deep_sleep" />
	</PreferenceCategory>

</PreferenceScreen>