<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/semc_bg"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow android:gravity="center_vertical" >

            <TextView
                style="@style/BaseText.Small"
                android:layout_weight="0.5"
                android:gravity="center_vertical|left"
                android:text="@string/current"
                android:textColor="@color/holo_blue" />

            <TextView
                style="@style/BaseText.Small"
                android:layout_weight="0.5"
                android:gravity="center_vertical|left"
                android:text="@string/requested"
                android:textColor="@color/holo_blue" />

        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_max_freq"
                    style="@style/BaseText"
                    android:layout_height="wrap_content"
                    android:text="@string/max_freq"
                    android:textColor="@color/holo_blue" />

                <TextView
                    android:id="@+id/tv_cur_max_freq"
                    style="@style/BaseText.Small"
                    android:gravity="center_vertical|right" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_max_freq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:prompt="@string/max_freq" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_min_freq"
                    style="@style/BaseText"
                    android:layout_height="wrap_content"
                    android:text="@string/min_freq"
                    android:textColor="@color/holo_blue" />

                <TextView
                    android:id="@+id/tv_cur_min_freq"
                    style="@style/BaseText.Small"
                    android:gravity="center_vertical|right" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_min_freq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_governor"
                    style="@style/BaseText"
                    android:layout_height="wrap_content"
                    android:text="@string/governor"
                    android:textColor="@color/holo_blue" />

                <TextView
                    android:id="@+id/tv_cur_governor"
                    style="@style/BaseText.Small"
                    android:gravity="center_vertical|right" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_governor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:prompt="@string/governor" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ioscheduler"
                    style="@style/BaseText"
                    android:layout_height="wrap_content"
                    android:text="@string/ioscheduler"
                    android:textColor="@color/holo_blue" />

                <TextView
                    android:id="@+id/tv_cur_ioscheduler"
                    style="@style/BaseText.Small"
                    android:gravity="center_vertical|right" />
            </LinearLayout>

            <Spinner
                android:id="@+id/sp_ioscheduler"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:prompt="@string/ioscheduler" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_on_boot"
            android:textColor="@color/holo_blue" />

        <ToggleButton
            android:id="@+id/ckb_apply_on_boot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/apply_on_boot"
            android:textColor="@color/holo_blue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="CPU Voltages"
            android:textColor="@color/holo_blue" />

        <Button
            android:id="@+id/voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="Configure"
            android:textColor="@color/holo_blue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:text="@string/apply"
            android:textColor="@color/holo_blue" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Apply CPU Settings"
            android:textColor="@color/holo_blue" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.86" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar"
        android:gravity="center"
        android:orientation="horizontal" >

    </LinearLayout>

</LinearLayout>